Bootstrap styles and angular components

--- a/is-andrew-tatham-available/src/app/quiz/quiz.component.html
+++ b/is-andrew-tatham-available/src/app/quiz/quiz.component.html
@@ -1,1 +1,3 @@
-<app-question-detail [question]="currentQuestion"></app-question-detail>
+<div class="quiz">
+    <app-question-detail [question]="currentQuestion"></app-question-detail>
+</div>
