--- a/is-andrew-tatham-available/src/app/question-detail/question-detail.component.html
+++ b/is-andrew-tatham-available/src/app/question-detail/question-detail.component.html
@@ -1,21 +1,23 @@
-
-
 <div *ngIf="hasQuestion">
-<h2>{{ question.questionText }}</h2>
-<ul class="">
-  <li *ngFor="let answer of question.allAnswers"
-    [class.selected]="answer.classList"
-    (click)="onSelectAnswer(answer)">
-    {{answer.text}}
-  </li>
-</ul>
+  <h2>{{ question.questionText }}</h2>
+  <div role="group" class="buttons">
+    <button type="button" *ngFor="let answer of question.allAnswers" class="btn" [class.btn-success]="answer.isCorrect" [class.btn-danger]="!answer.isCorrect"
+      (click)="onSelectAnswer(answer)">
+      {{answer.text}}
+    </button>
+  </div>
 </div>
 
 <div *ngIf="isWinner">
-  <h2>{{ winner.text }}</h2>
+  <div class="alert alert-success clearfix">
+    <h1>
+      <i class="fa fa-check"></i> {{ winner.text }}</h1>
+  </div>
 </div>
 
 <div *ngIf="isLoser">
-  <h2>{{ loser.text }}</h2>
+  <div class="alert alert-danger clearfix">
+    <h1>
+      <i class="fa fa-times"></i> {{ loser.text }}</h1>
+  </div>
 </div>
-
