--- a/is-andrew-tatham-available/src/app/app.component.html
+++ b/is-andrew-tatham-available/src/app/app.component.html
@@ -1,20 +1,16 @@
 <app-availability-detail></app-availability-detail>
 <hr>
-
-<div class="row">
-  <div class="col-sm">
-    <app-mailing-list></app-mailing-list>
-
-  </div>
-  <div class="col-sm">
-    <app-download-cv></app-download-cv>
-  </div>
-  <div class="col-sm">
-    <app-other-websites></app-other-websites>
-  </div>
-  <div class="col-sm">
-    <app-email-me></app-email-me>
-  </div>
+<div class="card-group">
+  <app-mailing-list></app-mailing-list>
+  <app-download-cv></app-download-cv>
+  <app-email-me></app-email-me>
 </div>
+
+<footer class="footer">
+  <div class="text-center">
+      <app-other-websites></app-other-websites>
+  </div>
+</footer>
+
 
 <app-google-analytics></app-google-analytics>
