--- a/is-andrew-tatham-available/src/app/mailing-list/mailing-list.component.html
+++ b/is-andrew-tatham-available/src/app/mailing-list/mailing-list.component.html
@@ -1,23 +1,30 @@
-<h2>Subscribe</h2>
-<p class="available">Please subscribe to be notified when my availability changes...</p>
-<p class="unavailable">Please subscribe to be notified when I am available again....</p>
+<div class="text-center">
+  <div class="card-body">
+    <h2 class="card-title">Subscribe</h2>
+    <p *ngIf="availability.isAvailable">
+      Please subscribe to be notified when my availability changes...
+    </p>
+    <p *ngIf="!availability.isAvailable">
+      Please subscribe to be notified when I am available again...
+    </p>
 
-<!-- Begin MailChimp Signup Form -->
-<div id="mc_embed_signup">
-  <form action="https://kaizensoftwareengineering.us16.list-manage.com/subscribe/post?u=dc41dc649cf9ec0ad4323fb29&amp;id=05efcc1c30"
-    method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank"
-    novalidate>
-    <div id="mc_embed_signup_scroll">
 
-      <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
-      <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-      <div style="position: absolute; left: -5000px;" aria-hidden="true">
-        <input type="text" name="b_dc41dc649cf9ec0ad4323fb29_05efcc1c30" tabindex="-1" value="">
-      </div>
-      <div class="clear">
-        <input role="submit" type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-primary">
-      </div>
+    <!-- Begin MailChimp Signup Form -->
+    <div id="mc_embed_signup">
+      <form action="https://kaizensoftwareengineering.us16.list-manage.com/subscribe/post?u=dc41dc649cf9ec0ad4323fb29&amp;id=05efcc1c30"
+        method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+        <div id="mc_embed_signup_scroll">
+          <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+          <div style="position: absolute; left: -5000px;" aria-hidden="true">
+            <input type="text" name="b_dc41dc649cf9ec0ad4323fb29_05efcc1c30" tabindex="-1" value="">
+          </div>
+          <div class="clear">
+              <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+              <input role="submit" type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-primary">
+          </div>
+        </div>
+      </form>
     </div>
-  </form>
+    <!--End mc_embed_signup-->
+  </div>
 </div>
-<!--End mc_embed_signup-->
