--- a/is-andrew-tatham-available/src/app/other-websites/other-websites.component.html
+++ b/is-andrew-tatham-available/src/app/other-websites/other-websites.component.html
@@ -1,6 +1,4 @@
-<h2>Websites</h2>
-<p>Other websites...</p>
-<div role="group" class="btn-group btn-group-vertical">
+<span role="group" class="btn-group">
   <a role="button" class="btn btn-outline-primary" target="_blank" href="https://www.linkedin.com/in/andrewtatham/">
     <i class="fab fa-linkedin"></i> linkedin</a>
   <a role="button" class="btn btn-outline-primary" target="_blank" href="https://github.com/andrewtatham/">
@@ -11,4 +9,4 @@
     <i class="fas fa-user"></i> andrew tatham</a>
   <a role="button" class="btn btn-outline-primary" target="_blank" href="https://kaizensoftwareengineering.com/">
     <i class="fas fa-user-tie"></i> kaizen software engineering</a>
-</div>
+</span>
