--- a/is-andrew-tatham-available/src/app/quiz/quiz.component.html
+++ b/is-andrew-tatham-available/src/app/quiz/quiz.component.html
@@ -1,3 +1,5 @@
-<div class="quiz">
+<div class="text-center">
+
     <app-question-detail [question]="currentQuestion"></app-question-detail>
+
 </div>
