--- a/is-andrew-tatham-available/src/app/download-cv/download-cv.component.html
+++ b/is-andrew-tatham-available/src/app/download-cv/download-cv.component.html
@@ -1,6 +1,10 @@
-<h2>Download</h2>
-<p>You can download my latest CV here...</p>
-<p>
-  <a role="button" class="btn btn-primary" href="Andrew Tatham CV.docx" download>
-    <i class="fas fa-file-alt"></i> Download my latest CV</a>
-</p>
+<div class="text-center">
+  <div class="card-body">
+    <h2 class="card-title">Download</h2>
+    <p>You can download my latest CV here...</p>
+    <p>
+      <a role="button" class="btn btn-primary" href="Andrew Tatham CV.docx" download>
+        <i class="fas fa-file-alt"></i> Download my latest CV</a>
+    </p>
+  </div>
+</div>
