--- a/is-andrew-tatham-available/src/app/email-me/email-me.component.html
+++ b/is-andrew-tatham-available/src/app/email-me/email-me.component.html
@@ -1,6 +1,11 @@
-<h2>Email</h2>
-<p>You can email me at...</p>
-<p>
-  <a role="button" class="btn btn-primary" href="mailto:andrewtatham+website@gmail.com">
-    <i class="fas fa-envelope"></i> andrewtatham@gmail.com</a>
-</p>
+<div class="text-center">
+  <div class="card-body">
+
+    <h2 class="card-title">Email</h2>
+    <p>You can email me at...</p>
+    <p>
+      <a role="button" class="btn btn-primary" href="mailto:andrewtatham+website@gmail.com">
+        <i class="fas fa-envelope"></i> andrewtatham@gmail.com</a>
+    </p>
+  </div>
+</div>
