--- a/is-andrew-tatham-available/src/app/quiz/quiz.component.html
+++ b/is-andrew-tatham-available/src/app/quiz/quiz.component.html
@@ -1,5 +1,9 @@
 <div class="text-center">
-
+  <p class="lead">
+    <i class="fas fa-mobile-alt"></i>
+    <em> To unlock my phone number please answer the below questions.</em>
+  </p>
+  <div class="">
     <app-question-detail [question]="currentQuestion"></app-question-detail>
-
+  </div>
 </div>
