--- a/is-andrew-tatham-available/src/app/availability-detail/availability-detail.component.html
+++ b/is-andrew-tatham-available/src/app/availability-detail/availability-detail.component.html
@@ -1,4 +1,4 @@
-<p>
+<p class="lead">
   <em>You've found my CV online and wanted to know...</em>
 </p>
 <div class="text-center">
@@ -7,12 +7,13 @@
 
 
   <div *ngIf="availability.isAvailable">
-    <div class="alert alert-success">
-      <h1>
-        <i class="fas fa-check"></i>
-        <b>{{availability.availableText}}</b>.</h1>
-      <h2>
-        <i class="fas fa-mobile-alt"></i> To unlock my phone number please answer the below questions.</h2>
+    <div class="alert alert-success alert-auto">
+      <div>
+        <h1>
+          <i class="fas fa-check"></i>
+            {{availability.availableText}}.
+        </h1>
+      </div>
     </div>
 
     <app-quiz></app-quiz>
@@ -20,11 +21,13 @@
   </div>
 
   <div *ngIf="!availability.isAvailable">
-    <div class="alert alert-danger">
+    <div class="alert alert-danger alert-auto">
+      <div>
 
-      <h1 class="alert-heading">
-        <i class="fas fa-times"></i> No, I'm not available. {{availability.unavailableText}}
-      </h1>
+        <h1>
+          <i class="fas fa-times"></i> No, I'm not available. {{availability.unavailableText}}
+        </h1>
+      </div>
     </div>
   </div>
 </div>
