--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,29 @@
 <app-availability-detail></app-availability-detail>
-<hr>
-<div class="card-group">
-  <app-mailing-list></app-mailing-list>
-  <app-download-cv></app-download-cv>
-  <app-email-me></app-email-me>
+
+
+
+<div class="row options">
+  <div class="col-md ">
+    <div class="card">
+      <app-mailing-list></app-mailing-list>
+    </div>
+  </div>
+  <div class="col-md ">
+    <div class="card">
+      <app-download-cv></app-download-cv>
+    </div>
+  </div>
+  <div class="col-md ">
+    <div class="card">
+      <app-email-me></app-email-me>
+    </div>
+  </div>
 </div>
+
 
 <footer class="footer">
   <div class="text-center">
-      <app-other-websites></app-other-websites>
+    <app-other-websites></app-other-websites>
   </div>
 </footer>
 
