--- a/src/app/quiz/quiz.component.html
+++ b/src/app/quiz/quiz.component.html
@@ -1,9 +1,7 @@
-<div class="text-center">
+<div class="quiz text-center">
   <p class="lead">
     <i class="fas fa-mobile-alt"></i>
-    <em> To unlock my phone number please answer the below questions.</em>
-  </p>
-  <div class="">
-    <app-question-detail [question]="currentQuestion"></app-question-detail>
-  </div>
+    <em> To unlock my phone number please answer these questions...</em>
+  </p>  
+  <app-question-detail [question]="currentQuestion"></app-question-detail>
 </div>
