--- a/src/app/availability-detail/availability-detail.component.html
+++ b/src/app/availability-detail/availability-detail.component.html
@@ -1,33 +1,34 @@
-<p class="lead">
-  <em>You've found my CV online and wanted to know...</em>
-</p>
-<div class="text-center">
-  <h1>Is Andrew Tatham Available?</h1>
+<div class="jumbotron text-center">
+  <p class="lead">
+    <em>You've got my CV and wanted to know...</em>
+  </p>
 
+  <h1 class="display-4">Is Andrew Tatham Available?</h1>
 
 
   <div *ngIf="availability.isAvailable">
-    <div class="alert alert-success alert-auto">
+    <div class="alert alert-success alert-auto fadein">
       <div>
-        <h1>
+        <h1 class="display-4">
           <i class="fas fa-check"></i>
-            {{availability.availableText}}.
+          {{availability.availableText}}.
         </h1>
       </div>
     </div>
-
-    <app-quiz></app-quiz>
-
   </div>
 
   <div *ngIf="!availability.isAvailable">
-    <div class="alert alert-danger alert-auto">
+    <div class="alert alert-danger alert-auto fadein">
       <div>
 
-        <h1>
+        <h1 class="display-4">
           <i class="fas fa-times"></i> No, I'm not available. {{availability.unavailableText}}
         </h1>
       </div>
     </div>
   </div>
+</div>
+
+<div *ngIf="availability.isAvailable">
+  <app-quiz></app-quiz>
 </div>
