--- a/src/app/question-detail/question-detail.component.html
+++ b/src/app/question-detail/question-detail.component.html
@@ -1,4 +1,4 @@
-<div class="card-body">
+<div class="question">
 
   <div *ngIf="hasQuestion">
     <h2>{{ question.questionText }}</h2>
@@ -11,14 +11,14 @@
   </div>
 
   <div *ngIf="isWinner">
-    <div class="alert alert-success alert-auto clearfix">
+    <div class="alert alert-success alert-auto clearfix fadein">
       <h1>
         <i class="fa fa-check"></i> {{ winner.text }}</h1>
     </div>
   </div>
 
   <div *ngIf="isLoser">
-    <div class="alert alert-danger alert-auto clearfix">
+    <div class="alert alert-danger alert-auto clearfix fadein">
       <h1>
         <i class="fa fa-times"></i> {{ loser.text }}</h1>
     </div>
