--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,89 @@
-.alert-auto {display:inline-block;}
+
+body{
+    background-color: rgb(200, 200, 200);
+
+}
+#particles-js {
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+}
+.container{
+    
+}
+.jumbotron{
+    background-color: rgba(255,255, 255, 0.1);
+    margin:1em 0;
+    padding:2em 0;
+}
+
+.alert-auto {
+    display:inline-block;
+}
+
+.quiz{
+    background-color: rgba(255,255, 255, 0.1);
+    margin:1em 0;
+    padding:2em 0;
+}
+
+.question{
+    margin:1em;
+}
+
+.btn{
+    margin:1px;
+}
+
+.card{
+    background-color: rgba(255,255, 255, 0.1);
+    border: none;
+}
+
+
+.footer{
+    background-color: rgba(255,255, 255, 0.1);
+    margin:1em 0;
+    padding:2em 0;
+}
+
+
+.fadein {
+    -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
+       -moz-animation: fadein 2s; /* Firefox < 16 */
+        -ms-animation: fadein 2s; /* Internet Explorer */
+         -o-animation: fadein 2s; /* Opera < 12.1 */
+            animation: fadein 2s;
+}
+
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
