--- a/src/app/availability-detail/availability-detail.component.html
+++ b/src/app/availability-detail/availability-detail.component.html
@@ -10,8 +10,7 @@
     <div class="alert alert-success alert-auto fadein">
       <div>
         <h1 class="display-4">
-          <i class="fas fa-check"></i>
-          {{availability.availableText}}.
+          <i class="fas fa-check"></i> {{availability.availableText}}.
         </h1>
       </div>
     </div>
@@ -22,7 +21,7 @@
       <div>
 
         <h1 class="display-4">
-          <i class="fas fa-times"></i> No, I'm not available. {{availability.unavailableText}}
+          <i class="fas fa-times"></i> {{availability.unavailableText}}
         </h1>
       </div>
     </div>
