--- a/src/app/availability-detail/availability-detail.component.html
+++ b/src/app/availability-detail/availability-detail.component.html
@@ -10,7 +10,7 @@
     <div class="alert alert-success alert-auto fadein">
       <div>
         <h1 class="display-4">
-          <i class="fas fa-check"></i> {{availability.availableText}}
+          <i class="fas fa-check"></i> {{availability.availabilityText}}
         </h1>
       </div>
     </div>
@@ -21,7 +21,7 @@
       <div>
 
         <h1 class="display-4">
-          <i class="fas fa-times"></i> {{availability.unavailableText}}
+          <i class="fas fa-times"></i> {{availability.availabilityText}}
         </h1>
       </div>
     </div>
