unsplash background, angular update

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,25 +1,28 @@
+<div class="gap"></div>
+
 <app-availability-detail></app-availability-detail>
 
-
+<div class="gap"></div>
 
 <div class="row options">
-  <div class="col-md ">
-    <div class="card">
+  <div class="col-lg">
+    <div class="card content">
       <app-mailing-list></app-mailing-list>
     </div>
   </div>
-  <div class="col-md ">
-    <div class="card">
+  <div class="col-lg">
+    <div class="card content">
       <app-download-cv></app-download-cv>
     </div>
   </div>
-  <div class="col-md ">
-    <div class="card">
+  <div class="col-lg">
+    <div class="card content">
       <app-email-me></app-email-me>
     </div>
   </div>
 </div>
 
+<div class=gap></div>
 
 <footer class="footer">
   <div class="text-center">
@@ -27,5 +30,6 @@
   </div>
 </footer>
 
+<div class=gap></div>
 
 <app-google-analytics></app-google-analytics>
