--- a/src/app/quiz/quiz.component.html
+++ b/src/app/quiz/quiz.component.html
@@ -1,5 +1,5 @@
-<div class="quiz text-center">
-  <p class="lead">
+<div class="quiz content">
+  <p>
     <i class="fas fa-mobile-alt"></i>
     <em> To unlock my phone number please answer these questions...</em>
   </p>  
