--- a/src/app/availability-detail/availability-detail.component.html
+++ b/src/app/availability-detail/availability-detail.component.html
@@ -1,15 +1,15 @@
-<div class="jumbotron text-center">
+<div class="jumbotron">
   <p class="lead">
     <em>You've got my CV and wanted to know...</em>
   </p>
 
-  <h1 class="display-4">Is Andrew Tatham Available?</h1>
+  <h1>Is Andrew Tatham Available?</h1>
 
 
   <div *ngIf="availability.isAvailable">
-    <div class="alert alert-success alert-auto fadein">
+    <div class="alert alert-success alert-auto fade-in-1">
       <div>
-        <h1 class="display-4">
+        <h1>
           <i class="fas fa-check"></i> {{availability.availabilityText}}
         </h1>
       </div>
@@ -17,10 +17,10 @@
   </div>
 
   <div *ngIf="!availability.isAvailable">
-    <div class="alert alert-danger alert-auto fadein">
+    <div class="alert alert-danger alert-auto fade-in-1">
       <div>
 
-        <h1 class="display-4">
+        <h1>
           <i class="fas fa-times"></i> {{availability.availabilityText}}
         </h1>
       </div>
@@ -29,5 +29,6 @@
 </div>
 
 <div *ngIf="availability.isAvailable">
+  <div class="gap"></div>
   <app-quiz></app-quiz>
 </div>
