--- a/src/app/email-me/email-me.component.html
+++ b/src/app/email-me/email-me.component.html
@@ -5,7 +5,7 @@
     <p>You can email me at...</p>
     <p>
       <a role="button" class="btn btn-primary" href="mailto:andrewtatham+website@gmail.com">
-        <i class="fas fa-envelope"></i> andrewtatham@gmail.com</a>
+        <i class="fas fa-envelope"></i>&nbsp;andrewtatham@gmail.com</a>
     </p>
   </div>
 </div>
