--- a/src/styles.css
+++ b/src/styles.css
@@ -1,89 +1,129 @@
+ :root {
+    --foo: linear-gradient(rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.8));
+    --bar: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.4));
+    --box-shadow: 5px 5px 20px 5px rgba(0, 0, 0, 0.5);
+  }
+  
+  @keyframes fade-in-1 {
+      0% {
+        opacity: 0;
+      }
+    
+      100% {
+        opacity: 1;
+      }
+    }
+    
+    @keyframes fade-in-2 {
+      0% {
+        opacity: 0;
+      }
+    
+      50% {
+        opacity: 0;
+      }
+    
+      100% {
+        opacity: 1;
+      }
+    }
+    
+    
+    .fade-in-1 {
+      animation: fade-in-1 1s;
+    }
+    
+    .fade-in-2 {
+      animation: fade-in-2 2s;
+    }
 
-body{
-    background-color: rgb(200, 200, 200);
-
-}
-#particles-js {
-    position: absolute;
+  body,
+  html {
+    font-family: 'Open Sans', sans-serif;    
+    line-height: 1.6em;
+  }
+  
+  #bg {
+    position: fixed;
     left: 0px;
     top: 0px;
     width: 100%;
     height: 100%;
-    z-index: -1;
-}
-.container{
-    
-}
-.jumbotron{
-    background-color: rgba(255,255, 255, 0.1);
-    margin:1em 0;
-    padding:2em 0;
-}
+    z-index: -2;
+    background: var(--bar);
+    animation: fade-in-1 1s;
+    background-image: url("https://source.unsplash.com/collection/151521");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
 
-.alert-auto {
-    display:inline-block;
-}
-
-.quiz{
-    background-color: rgba(255,255, 255, 0.1);
-    margin:1em 0;
-    padding:2em 0;
-}
-
-.question{
-    margin:1em;
-}
-
-.btn{
-    margin:1px;
-}
-
-.card{
-    background-color: rgba(255,255, 255, 0.1);
-    border: none;
-}
+  .gap {
+    height: 2em;
+  }
 
 
-.footer{
-    background-color: rgba(255,255, 255, 0.1);
-    margin:1em 0;
-    padding:2em 0;
-}
+  .jumbotron {
+    background: var(--foo);
+    -webkit-box-shadow: var(--box-shadow);
+    -moz-box-shadow: var(--box-shadow);
+    box-shadow: var(--box-shadow);
+    text-align: center;
+    margin: 1em;
+    padding: 1em;
+  }
+  
+  .quiz {
+   
+    text-align: center;
+    margin: 1em;
+    padding: 1em;
+  }
+
+  .question {
+    margin: 1em;
+  }
 
 
-.fadein {
-    -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
-       -moz-animation: fadein 2s; /* Firefox < 16 */
-        -ms-animation: fadein 2s; /* Internet Explorer */
-         -o-animation: fadein 2s; /* Opera < 12.1 */
-            animation: fadein 2s;
+  .content {
+    background: var(--foo);
+    border-radius: .3rem;
+    margin: 1em;
+    padding: 1em;
+  
+    -webkit-box-shadow: var(--box-shadow);
+    -moz-box-shadow: var(--box-shadow);
+    box-shadow: var(--box-shadow);
+  }
+
+  .footer {
+    background: var(--foo);
+    border-radius: .3rem;
+    margin: 1em;
+    padding: 1em;
+  
+    -webkit-box-shadow: var(--box-shadow);
+    -moz-box-shadow: var(--box-shadow);
+    box-shadow: var(--box-shadow);
 }
 
-@keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
+  
+.btn {
+  margin: 1em;
 }
 
-/* Firefox < 16 */
-@-moz-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
+  /*
+  
+  .alert-auto {
+    display: inline-block;
+  }
+  
+  
 
-/* Safari, Chrome and Opera > 12.1 */
-@-webkit-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
+  
+  
+  
+  
 
-/* Internet Explorer */
-@-ms-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-
-/* Opera < 12.1 */
-@-o-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
+  
+   */
