--- a/site/styles.css
+++ b/site/styles.css
@@ -56,6 +56,7 @@ html {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  filter: blur(4px);
 }
 
 .gap {
